[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "kay"
version = "0.1.2"
description = "Data API for Context Retrieval"
readme = "README.md"
license = { file = "LICENSE" }


dependencies = [
    'requests >= 2'
]
requires-python = ">=3.8.1,<4.0"


[tool.black]
line-length = 88
target-version = ['py311']

